# ras_computer_vision

./: README.md
downsampling_test/: CMakeLists.txt~  package.xml
downsampling_test/src/: downsample_depth.cpp  downsample_depth.cpp.autosave
milestone_0_follow_object/: CMakeLists.txt  package.xml  package.xml~
milestone_0_follow_object/src/: follow_closest_object.cpp  follow_closest_object_newbutnotworkingwell.cpp  follow_closest_object_old.cpp
milestone_1_object_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml
milestone_1_object_detection/src/: object_detection.cpp  object_detection.cpp~  plane_segmentation.cpp
opencv_test/: CMakeLists.txt  CMakeLists.txt~  package.xml~
opencv_test/src/: blob_detection (copy).cpp  blob_detection.cpp  blob_detection_w_color_mask.cpp  color_mask.cpp  display_image.cpp  edge_detection.cpp
ras_computer_vision/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
transform_point_cloud/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
transform_point_cloud/src/: transform_pointcloud.cpp
